[package]
name = "axum-unix"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
futures-util = "0.3"
hyper = "1"
hyper-util = "0.1"
libc = "0.2"
log = "0.4"
nix = { version = "0.29", features = ["user"] }
serde = { version = "1", optional = true, features = ["derive"] }
tokio = { version = "1", features = ["signal"] }
tokio-util = { version = "0.7", features = ["codec", "net", "rt"] }
tower = "0.5"
